crux-mir-comp/test/symb_eval/comp/ptr_offset.good
test ptr_offset/<DISAMB>::f_test[0]: ok
test ptr_offset/<DISAMB>::use_f[0]: FAILED

failures:

---- ptr_offset/<DISAMB>::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:41:9: 41:79 !test/symb_eval/comp/ptr_offset.rs:64:5: 64:30: error: in ptr_offset/<DISAMB>::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/ptr_offset.rs:64:5:
[Crux]   	b2 < 10

[Crux] Overall status: Invalid.
